ft/Refactor for upload.js related file and updating api-doc,test-case, and add health-check routes
